# lazyworktree

./: .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  AGENTS.md  COMPARAISON.md  MIGRATION-PLANS.md  Makefile  README.md  config.example.yaml  go.mod  go.sum  lazyworktree.1  main.py  pyproject.toml
.github/workflows/: ci.yml  dependabot.yaml  precommit.yml
Casks/: lazyworktree.rb
cmd/lazyworktree/: main.go  main_test.go  subcommands_test.go
internal/app/: access_history_test.go  app.go  app_test.go  auto_refresh.go  auto_refresh_test.go  base_selection.go  base_selection_more_test.go  base_selection_test.go  command_runner_test.go  devicons_test.go  handlers.go  handlers_test.go  helpers.go  helpers_test.go  integration_error_flow_test.go  integration_flow_test.go  integration_test.go  messages.go  more_coverage_test.go  pr_worktree_test.go  random_branch_name.go  screens.go  screens_more_test.go  screens_test.go
internal/cli/: operations_test.go
internal/commands/: symlinks.go  symlinks_test.go
internal/config/: config.go  config_test.go  custom_themes_test.go  gitconfig.go  gitconfig_test.go
internal/git/: service.go  service_resolve_repo_test.go  service_test.go
internal/log/: debug_test.go
internal/models/: models.go
internal/security/: trust.go  trust_test.go
internal/theme/: custom_theme_test.go  detector.go  detector_test.go  theme.go  theme_test.go
lazyworktree/: app.py
shell/: README.md  functions.shell
tests/: test_rename.py
