[project]
name = "lazyworktree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7", "rich>=14.2.0", "textual>=6.11.0", "PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
lazyworktree = "main:main"

[tool.setuptools]
packages = ["lazyworktree"]
py-modules = ["main"]

[tool.uv]
package = true
